add create profile + fix swagger-ui with x-api-key in header
