# api/swagger/swagger.yaml
@@ -236,8 +236,8 @@ paths:
 securityDefinitions:
   api_key:
     type: apiKey
-    name: api_key
-    in: query
+    name: x-api-key
+    in: header
 ################################################################################
 #                                   Definitions                                #
 ################################################################################
